--- a/src/components/HeaderBlock/HeaderBlock.module.css
+++ b/src/components/HeaderBlock/HeaderBlock.module.css
@@ -32,7 +32,7 @@
 .cover .wrap {
     position: relative;
     z-index: 1;
-    width: 80%;
+    width: 90%;
     /*padding: 100px 16px;*/
     /*max-width: 1024px;*/
 }
@@ -44,7 +44,7 @@
 }
 
 .cover .descr {
-    color: black;
+    color: red;
     /*padding: 15px 0 30px 0;*/
     font-size: 20px;
     line-height: 1.55;
